testsuite/tests/parser/should_fail/T1344b.hs
module T1344b where

b = "Hel\x6c0000000000000000 World"

